分页，模版的global配置

--- a/templates/home/app/detail.html
+++ b/templates/home/app/detail.html
@@ -1,7 +1,7 @@
-{{template "header"}}
+{{define "appDetail"}}
 <div>
     <h1>
         {{.app.AppName}}
     </h1>
 </div>
-{{template "footer"}}
+{{end}}
