--- a/templates/home/layout/layout.html
+++ b/templates/home/layout/layout.html
@@ -18,7 +18,7 @@
     <!-- header  -->
     <header class="bg-gray-100 p-2">
         <div class="sticky top-0 z-40 lg:z-50 w-full max-w-screen-lg mx-auto flex-none flex items-center">
-            <div class="flex-none py-1 px-2 bg-gray-200">logo</div>
+            <div class="flex-none py-1 px-2 bg-gray-200 text-2xl">logo</div>
             <nav class="mx-2 ml-4">
                 <ol class="flex">
                     <li>
