--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -1,4 +1,4 @@
-{{template "header"}}
+{{define "login"}}
 <div>
     <h1>
         login
@@ -17,4 +17,4 @@
         }
     </script>
 </div>
-{{template "footer"}}
+{{end}}
