--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -2,7 +2,7 @@
 <div class="mt-4">
     <div class="flex items-end">
         <h1 class="text-xl">推荐应用</h1>
-        <a href="" class="text-blue-600 ml-auto">发布应用</a>
+        <a href="/publish" class="text-blue-600 ml-auto">发布应用</a>
     </div>
     <hr class="my-3">
     <div class="grid lg:grid-cols-5 md:grid-cols-4 sm:grid-cols-2 gap-4">
