--- a/templates/home/layout/layout.html
+++ b/templates/home/layout/layout.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>{{.seo.Title}}{{if .seo.Title}}-{{end}}{{.seo.BaseTitle}}</title>
     <!-- tailwind css  -->
     <link href="https://unpkg.com/tailwindcss@^2.1.0/dist/tailwind.min.css" rel="stylesheet" />
     <!-- jquery  -->
@@ -18,7 +18,9 @@
     <!-- header  -->
     <header class="bg-gray-100 p-2">
         <div class="sticky top-0 z-40 lg:z-50 w-full max-w-screen-lg mx-auto flex-none flex items-center">
-            <div class="flex-none py-1 px-2 bg-gray-200 text-2xl">logo</div>
+            <a href="" title="">
+                <div class="flex-none py-1 px-2 bg-gray-200 text-2xl">logo</div>
+            </a>
             <nav class="mx-2 ml-4">
                 <ol class="flex">
                     <li class="mr-2">
