--- a/templates/home/layout/layout.html
+++ b/templates/home/layout/layout.html
@@ -4,14 +4,19 @@
 <html lang="zh-cn">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>{{.seo.Title}}{{if .seo.Title}}-{{end}}{{.seo.BaseTitle}}</title>
+    <meta name="keywords" content="{{.seo.Keywords}}">
+    <meta name="description" content="{{.seo.Desc}}">
+    <meta name="author" content="{{.seo.Author}}">
+
     <!-- tailwind css  -->
     <link href="https://unpkg.com/tailwindcss@^2.1.0/dist/tailwind.min.css" rel="stylesheet" />
     <!-- jquery  -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/jquery@3.6.0/dist/jquery.js"></script>
 </head>
 
 <body class="flex-column min-h-screen">
