--- a/templates/home/components/app-item.html
+++ b/templates/home/components/app-item.html
@@ -1,6 +1,6 @@
 {{define "app-item"}}
 <a href="/app/{{.Code}}"
-    class="group rounded-md bg-gray-100 pb-4 text-gray-800 border-gray-200 flex flex-col items-center justify-center p-2 hover:shadow-lg">
+    class="group rounded-md bg-gray-100 pb-4 text-gray-800 border-gray-200 flex flex-col items-center justify-center p-2 hover:shadow-lg hover:bg-gray-200">
     <img src="{{.AppIcon}}" class="rounded-full w-16 h-16 my-6 hover:rotate-90" />
     <h2 class="overflow-ellipsis">{{.AppName}}</h2>
     <span class="text-sm font-mono text-gray-400 overflow-ellipsis">
