--- a/templates/home/app/activity/detail.html
+++ b/templates/home/app/activity/detail.html
@@ -26,20 +26,33 @@
             <ol>
                 {{range .codes}}
                 <li class="flex p-2">
+                    {{if not .Used}}
+                    🔥
+                    {{end}}
                     <div class="flex-1">
                         <span>{{.InviteCode}}</span>
+                        <span class="text-gray-400 text-sm">({{.Count}})人已复制</span>
                     </div>
+
+                    {{if .Copied}}
+                    <a href="javascript:copy('{{.Code}}')" class="text-gray-400 mr-2">
+                        已复制
+                    </a>
+                    {{else}}
                     <a href="javascript:copy('{{.Code}}')" class="text-blue-600 mr-2">
                         复制
                     </a>
+                    {{end}}
 
                     {{if .Used}}
-                    <span class="text-gray-400">已使用</span>
+                    <span class="text-gray-400 mr-2">已使用</span>
                     {{else}}
                     <a href="/api/codes/{{.Code}}/used" class="mr-2">
-                        我已使用
+                        确认激活
                     </a>
+
                     {{end}}
+
                 </li>
                 <hr>
                 {{end}}
@@ -57,11 +70,11 @@
                     "content-type": "application/json"
                 }
             }).then(res => res.json()).then(res => {
-                let code = res.data.data
-                let r = confirm("激活码:" + code)
-                if (r) {
-                    navigator.clipboard.writeText(code)
-                }
+                let data = res.data || {}
+                let message = res.message || ""
+                let { data: code = "" } = data
+                let r = confirm("长按复制!!!\n激活码: " + (code || message))
+                location.href = ""
             })
         }
     </script>
