--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -3,12 +3,11 @@
     <h1>
         login
     </h1>
-    <form action="/api/login" method="post">
+    <form action="/api/login" method="POST">
         <input type="text" name="name" placeholder="username...">
         <input type="text" name="password" placeholder="password...">
         <button type="submit">提交</button>
     </form>
-
 
     <script>
         function submit(e) {
